fix pom xml to run tests